# R1v0.1

./: .env.local  .firebaserc  .gitignore  README.md  docker-compose.yml  firebase.json  firestore.rules  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
backend/: nix_requirement.txt  pyproject.toml  requirements.txt
backend/app/: __init__.py  api.py  config.py  database.py  dependencies.py  main.py
backend/app/core/: __init__.py  agent_core.py  core_module.py  processing_worker.py
backend/app/ml/: data_cache.py  llm_adapter.py  preference_learner.py  route_optimizer.py  traffic_predictor.py
backend/app/models/: alerts.py  analysis.py  feeds.py  pavement.py  routing.py  signals.py  traffic.py  websocket.py
backend/app/routers/: __init__.py  alerts.py  analysis.py  analytics.py  config.py  events.py  feeds.py  incidents.py  pavement.py  personalized_routes.py  route_history.py  routes.py  video.py  weather.py
backend/app/services/: __init__.py  analytics_service.py  event_service.py  exceptions.py  feed_manager.py  feed_notifier.py  feed_process_helper.py  llm_signal_advisor.py  personalized_routing_service.py  route_optimization_service.py  services.py  traffic_signal_service.py  video_processor.py  video_synchronizer.py  weather_service.py
backend/app/tasks/: prediction_scheduler.py
backend/app/tests/: __init__.py
backend/app/utils/: __init__.py  (+7 more)
backend/configs/: config.yaml
backend/data/: vehicle_data.db
backend/data_ingestion/: check_ingestion_pipeline.py  config.py  data_consumer.py  data_producer.py  models.py
(+156 files in other folders)
